project/tests/in_progress/for_main/bad/types/base_types/type_char/type_char04.c
#include <stdio.h>

unsigned char c1 = 66;

int main() {
  printf("%d\n", c1);
  printf("%c\n", c1);

  return 0;
}
